# rsocket-mines

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: __main__.py  app.py  cert_generator.py  dockerfile  handlers.py  middleware.py  pyproject.toml  response_channel.py  response_stream.py  server.py  settings.py  stream_chat.py
backend/utils/: storage.py
configs/: Caddyfile  Caddyfile.dev  default.env
docs/: CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTORS.md
frontend/: app.js  chat.js  dockerfile  index.html  package.json  webpack.config.js
frontend/UI/: index.html  jsconfig.json  main.js  styles.css
frontend/UI/services/: bot.js  mid.js  resize.js  visibility.js  wrong_pwd_handler.js
frontend/ui/: index.html  styles.css
frontend/ui/services/: resize.js  visibility.js  wrong_pwd_handler.js
frontend/utils/: bot.js  connector.js  handlers.js  logger.js  mid.js  requestFnf.js  requestResponse.js  requestStream.js  sessionStorage.js  top.js  visibility.js
